--- a/papers/GdMn2O5/bib.bib
+++ b/papers/GdMn2O5/bib.bib
@@ -1855,3 +1855,14 @@ volume = {58},
 year = {2009}
 }
 
+@article{Harris1972,
+author = {Harris, E. A.},
+file = {:home/ponet/Downloads/E{\_}A{\_}Harris{\_}1972{\_}J.{\_}Phys.{\_}C {\_}Solid{\_}State{\_}Phys.{\_}5{\_}338.pdf:pdf},
+journal = {Journal of Physics C: Solid State Physics},
+mendeley-groups = {PhD/Multiferroics},
+number = {5},
+pages = {338},
+title = {{Related content EPR of Mn pairs in MgO and CaO}},
+year = {1972}
+}
+
