--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -62,13 +62,13 @@
 \chapter*{Acknowledgements}
 \tableofcontents
 
-\Include{Introduction}
-\Include{Theory}
-\chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
-\Include{Rashba}
-\Include{Cr}
+% \Include{Introduction}
+% % \Include{Theory}
+% \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
+% \Include{Rashba}
+% \Include{Cr}
 \Include{GdMn2O5}
-\Include{Softening}
+% \Include{Softening}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
