more work on Gd

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -58,8 +58,8 @@ The magnetic configuration features two AFM Mn chains per unit cell, which are f
 
 The improper ferroelectricity is generated through the symmetric Heisenberg exchange striction, combined with the geometric frustration and strong antiferromagnetic exchanges\ref{Choi2008}.
 The geometric frustration appears due to the odd number of AFM coupled spins in the Mn pentagons that surround each Gd ion, as can be seen in panel c of Fig.~\ref{fig:GdMn2O5_unit_cell}.
-Similar to the situation in AFM coupled ions on a triangular lattice, not all AFM exchanges can be satisfied maximally (i.e. by having completely antiparallel spins on each AFM bond).
-Each bond will then optimize the magnetic exchange energy together with the elastic energy leading to bonds with antiparallel spins to contract whereas bonds with parallel spins will extend, as shown in Fig.~\ref{fig:GdMn2O5_unit_cell}(b). This can be understood by writing the energy of each bond between two Mn ions $W$, following Ref. \cite{Harris1972}, as:
+Similar to the situation in AFM coupled ions on a triangular lattice, not all AFM exchanges can be simultaneously satisfied (i.e. by having completely antiparallel spins on each AFM bond).
+Each bond will then optimize the magnetic exchange energy together with the elastic energy resulting in bonds with antiparallel spins to contract whereas bonds with parallel spins will extend, as shown in Fig.~\ref{fig:GdMn2O5_unit_cell}(b). This can be understood from the dependence energy of each bond on the bondlength between two Mn ions $W$, following Ref. \cite{Harris1972}, as:
 \begin{equation}
 	W = J(r)\mathbf{S}_i \cdot \mathbf{S}_j + \frac{\kappa \delta r^2}{2r_0},
 \end{equation}
