added more heatmaps

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -51,12 +51,12 @@ Although the size of the electric polarization thus created is usually orders of
 Here we specifically investigate GdMn$_2$O$_5$ (see Fig.~\ref{fig:GdMn2O5_unit_cell}), an example of a type-II multiferroic\cite{Khomskii2009}, where the ferroelectric polarization can be controlled to a high degree by the application of an external magnetic field, as will be shown below.
 The orthorhombic $R$Mn$_2$O$_5$ manganites have a very complex crystalline structure, which leads to a wealth of different phases depending on the temperature, magnetic field and even electric-field poling history \cite{Zheng2019}.
 To keep the discussion tractable and in line with the experiments that were performed, we give a summary of the transitions and phases that are important for this part of the Thesis.
-$R$Mn$_2$O$_5$ have crystallographic group $Pbam$ \cite{Alfonso97a} in the paramagnetic phase at high temperature, which eventually gets lowered to the crystallographic space group $P_ab2_1a$ when the commensurate magnetic order locks in below $T_{N} \sim 33K$.
-This order is characterised by the propagation vector $\bm{k} = (1/2, 0, 0)$, i.e. there is a unit cell doubling along the crystalline $a$ direction. Spins are ordered ferromagnetically along the crystalline $c$-direction. This magnetic transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signalling the onset of the improper ferroelectric polarization order along the $b$-direction \cite{Lee13}.
+$R$Mn$_2$O$_5$ have crystallographic group $Pbam$ \cite{Alonso97} in the paramagnetic phase at high temperature, which eventually gets lowered to the crystallographic space group $P_ab2_1a$ when the commensurate magnetic order locks in below $T_{N} \sim 33K$.
+This order is characterised by the propagation vector $\bm{k} = (1/2, 0, 0)$, i.e. there is a unit cell doubling along the crystalline $a$-direction. Spins are ordered ferromagnetically along the crystalline $c$-direction. This magnetic transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signalling the onset of the improper ferroelectric polarization order along the $b$-direction \cite{Lee13}.
 When the temperature is lowered further, the polarization $P_b$ saturates to a maximum value of around 3600 $\mu$ C/m$^2$, which is the largest of all rare-earth magnanites, but still tiny compared to proper ferroelectrics like BaTiO$_3$ with $P \approx 2 \times 10^5 \mu C/m^2$.
 The magnetic configuration features two AFM Mn chains per unit cell, which are formed by pyramidally coordinated $Mn^{3+}$ and octahedrally coordinated $Mn^{4+}$ ions, as indicated by the light blue lines and purple polygons in Fig.~\ref{fig:GdMn2O5_unit_cell}. The Mn spins of the chains in GdMn$_2$O$_5$ lie mostly along the fourfold symmetry axis of the Mn pyramids, making angles of $\pm 23.4^\circ$ with the $a$-axis.
 
-The improper ferroelectricity is generated through the symmetric Heisenberg exchange striction, combined with the geometric frustration and strong antiferromagnetic exchanges\ref{Choi2008}.
+The improper ferroelectricity is generated through the symmetric Heisenberg exchange striction, combined with the geometric frustration and strong antiferromagnetic exchanges~\cite{Choi2008}.
 The geometric frustration appears due to the odd number of AFM coupled spins in the Mn pentagons that surround each Gd ion, as can be seen in panel c of Fig.~\ref{fig:GdMn2O5_unit_cell}.
 Similar to the situation in AFM coupled ions on a triangular lattice, not all AFM exchanges can be simultaneously satisfied (i.e. by having completely antiparallel spins on each AFM bond).
 Each bond will then optimize the magnetic exchange energy together with the elastic energy resulting in bonds with antiparallel spins to contract whereas bonds with parallel spins will extend, as shown in Fig.~\ref{fig:GdMn2O5_unit_cell}(b). This can be understood from the dependence energy of each bond on the bondlength between two Mn ions $W$, following Ref. \cite{Harris1972}, as:
@@ -81,7 +81,7 @@ A similar train of thought can be followed as before, where all the exchanges be
 This contribution does not suffer from the same cancellation between ionic displacements and electronic charge, and leads to the majority of the ferroelectric polarization in these materials.
 
 Gd$^{3+}$ is special with respect to the other magnetic rare-earths in $R$Mn$_2$O$_5$, because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched OAM and associated anisotropic charge distribution. This means that the large spin (nominally $S=7/2$) can orient itself relatively freely to optimize the magnetic interactions with its neighboring Mn atoms, and that it has a high magnetic susceptibility and associated magnetoelectric effects.
-This leads to GdMn$_2$O$_5$ outclassing the other $R$Mn$_2$O$_5$ compounds both in size and tunability of $P_b$, with a measured variation of up to $5000 \mu C/m^2$ when a magnetic field is applied~\ref{Lee13}. 
+This leads to GdMn$_2$O$_5$ outclassing the other $R$Mn$_2$O$_5$ compounds both in size and tunability of $P_b$, with a measured variation of up to $5000 \mu C/m^2$ when a magnetic field is applied~\cite{Lee13}. 
 
 Now that the stage is set, we will describe the puzzling experimental observations that we will try to explain.
 %Even though the AFM intrachain superexchange interactions dominate over the AFM interchain interactions, there is nonetheless a geometric frustration due to the crystal structure, which can be seen most easily seen from the Mn pentagons surrouding the Gd atoms. This means that all AFM exchanges can not be satisfied at the same time, causing certain Mn bonds between the chains to have energetically unfavorable spin alignment. This leads to the first contribution to the ferroelectric polarization through Heisenberg exchange striction, lengthening bonds that have parallel spins and shortening those that have antiparallel ones.
@@ -91,7 +91,7 @@ Now that the stage is set, we will describe the puzzling experimental observatio
 	\caption{\label{fig:GdMn2O5_unit_cell}{\bf Unit cell and magnetic configuration of GdMn$_2$O$_5$.} The spheres signify Mn (purple), Gd (green) and Oxygen (red) ions. a) {\it Magnetic unit cell}, the zig-zag chains along the $a$-direction (cyan lines) show which Mn ions are linked with strong AFM exchange, resulting in the $\mathbf{L}_1$ and $\mathbf{L}_2$ N\'eel vectors. The boundary of the structural unit cell is marked by the black box and the yellow arrows denote the exchange paths between Gd and neighboring Mn ions in both chains, corresponding to $v_1$ and $v_2$. (b-c) {\it Symmetric magnetostriction}, the black arrows signify the zero field orientation of the spins. The yellow arrows denote the expanding bonds due to alignment of spins and AFM exchange, and the blue arrows denote contracting bonds.}
 \end{figure}
 \section{Experimental results}
-In previous experimental measurements, the magnetic field was always applied along the crystalline $a$-direction~\ref{Lee13}.
+In previous experimental measurements, the magnetic field was always applied along the crystalline $a$-direction~\cite{Lee13}.
 This leads to the aforementioned reversal and restoration of the polarization, and a relatively normal hysteresis loop (see Fig.~1 of \cite{Lee13}), alternating between two states. However, we found that the behavior of $P(H)$ depends strongly on the angle between the applied magnetic field and the $a$-direction, $\phi_H$.
 As can be seen from Fig.~\ref{fig:GdMn2O5_experiment} panel a, at high angle $P_b$ remains positive although a small jump can be observed signalling two different internal states.
 In the intermediate `magic angle' region (panel b and d), there is a crossover between the low angle regime of Ref.~\ref{Lee13} and the high angle regime of our experiments, where four different states with different values of $P_b$ are visited while the external field cycles up and down twice.
@@ -164,7 +164,7 @@ A further three terms in the Hamiltonian depend solely on $L_1$ and $L_2$:
     +\sum_{\alpha}\chi^{-1}((\mathbf{H}\cdot \mathbf{L}_\alpha)^2-H^2)
     -K_L\sum_\alpha(\mathbf{L}_\alpha\cdot \mathbf{n}_\alpha)^2\label{eq:GdMn2O5_hami_1}
 \end{equation}
-The first originates from the gain in exchange energy through spin canting when the chains are not colinear, due to the competition of interchain exchange $J_\perp$ and the intrachain AFM exchange $J_\|$ \cite{Sushkov2008} \lp{more details?}, with $\Gamma\sim\frac{J_{\perp}^2}{J_\|}>0$. The term with $\chi$ represents the gained Zeeman energy when the Mn spins are slightly canted from the purely AFM order inside the chains, resulting in a weak magnetic moment which couples the the external field. The last denotes the easy-axis anisotropy which is aligned with the fourfold axes of the pyramidally coordinated Mn ions, i.e. $\mathbf{n}_\alpha=(cos(\pm23.4^\circ),sin(\pm23.4^\circ))$ respectively.
+The first originates from the gain in exchange energy through spin canting when the chains are not colinear, due to the competition of interchain exchange $J_\perp$ and the intrachain AFM exchange $J_\|$ \cite{Sushkov2008} \lp{more details?}, with $\Gamma\sim\frac{J_{\perp}^2}{J_\|}>0$. The term with $\chi$ represents the gained Zeeman energy when the Mn spins are slightly canted from the purely AFM order inside the chains, resulting in a weak magnetic moment which couples the the external field. The last denotes the easy-axis anisotropy which is aligned with the fourfold axes of the pyramidally coordinated Mn ions, i.e. $\mathbf{n}_\alpha=$(cos($\pm$23.4$^\circ$), sin($\pm$23.4$^\circ$)) respectively.
 
 Similarly, three terms can be identified as coming purely from the Gd spins:
 \begin{equation}
@@ -176,14 +176,38 @@ The final term denotes the Zeeman energy from the interaction with the externall
 The model parameters used here are $J_\perp = 1.89$~meV, $J_\parallel = 26.67$~meV, $K_L = 5.27$~meV, $K_S = 0.2$~meV, $v_1 = 3.33$~meV, $v_2 = 0.15$~meV \lp{check order parameters, maybe show different sets?}. 
 with the model parameters used to fit the experimental data, $\alpha = 0.06\:\mu$C/cm$^2$, $\beta = 0.04\:\mu$C/cm$^2$, $\gamma = 0.06\:\mu$C/cm$^2$.
 
-As mentioned before, the low temperature commensurate state breaks both time reversal symmetry, $T: (\mathbf{L}_1, \mathbf{L}_2) \rightarrow (-\mathbf{L}_1, -\mathbf{L}_2)$, and inversion symmetry $I:(\mathbf{L}_1, \mathbf{L}_2) \rightarrow (-\mathbf{L}_1, \mathbf{L}_2)$, leading to a fourfold degenerate energy surface as shown in Fig.~\ref{fig:GdMn2O5_heatmap1}. 
+As mentioned before, the low temperature commensurate state breaks both time reversal symmetry, $T: (\mathbf{L}_1, \mathbf{L}_2) \rightarrow (-\mathbf{L}_1, -\mathbf{L}_2)$, and inversion symmetry $I:(\mathbf{L}_1, \mathbf{L}_2) \rightarrow (-\mathbf{L}_1, \mathbf{L}_2)$, which makes the system fall into one of the fourfold degenerate energy minima as shown in the top left panel of Fig.~\ref{fig:GdMn2O5_heatmap}. 
 To simulate the experimental measurements in Fig.~\ref{fig:GdMn2O5_experiment} at low temperature, we choose one of the four degenerate minima of the Hamiltonian, gradually increase and decrease the applied magnetic field, and minimize the energy in order to track the instantaneous local minimum. 
 
 The results are shown in Fig.~\ref{fig:GdMn2O5_theory}
-% \begin{figure*}[t]
-%     \centering
-%     \IncludeGraphics[width=\linewidth]{0field_heatmap.png}
-% \end{figure*}
+\begin{figure*}[t]
+	\begin{subfigure}{0.24\textwidth}
+    \IncludeGraphics{"field_heatmap1"}
+	\end{subfigure}
+	\begin{subfigure}{0.24\textwidth}
+    \IncludeGraphics{"field_heatmap2"}
+	\end{subfigure}
+	\begin{subfigure}{0.24\textwidth}
+    \IncludeGraphics{"field_heatmap3"}
+	\end{subfigure}
+	\begin{subfigure}{0.24\textwidth}
+    \IncludeGraphics{"field_heatmap4"}
+	\end{subfigure}\\
+	\begin{subfigure}{0.24\textwidth}
+    \IncludeGraphics{"field_heatmap5"}
+	\end{subfigure}
+	\begin{subfigure}{0.24\textwidth}
+    \IncludeGraphics{"field_heatmap6"}
+	\end{subfigure}
+	\begin{subfigure}{0.24\textwidth}
+    \IncludeGraphics{"field_heatmap7"}
+	\end{subfigure}
+	\begin{subfigure}{0.24\textwidth}
+    \IncludeGraphics{"field_heatmap8"}
+	\end{subfigure}
+	\caption{{\bf Energy surfaces inside hysteresis loop} $\phi_{L_1}$ and $\phi_{L_2}$ both range between 0 to $2\pi$.}
+	\label{fig:GdMn2O5_heatmap}
+\end{figure*}
 
 \begin{figure*}[t]
     \centering
