--- a/papers/GdMn2O5/bib.bib
+++ b/papers/GdMn2O5/bib.bib
@@ -1866,3 +1866,18 @@ title = {{Related content EPR of Mn pairs in MgO and CaO}},
 year = {1972}
 }
 
+@article{Alonso97,
+abstract = {The title compounds (R = La, Pr, Nd, Sm, Eu, Tb, Ho, Er) have been prepared in polycrystalline form by a citrate technique and, excepting the Sm and Eu phases, structurally studied by high-resolution neutron powder diffraction. All the materials are isostructural (space group Pbam, Z = 4) and contain infinite chains of Mn4+O6 octahedra sharing edges, linked together by Mn3+O5 and RO8 units. The size of the three kinds of coordination polyhedron regularly decreases as R cations become smaller. A bond-valence study allowed us to detect the presence of important tensile and compressive stresses in the crystal structure of LaMn2O5, which are progressively released along the series as the rare-earth size decreases. The magnetic properties strongly depend on the nature of R, going from the spin-glass behaviour observed at low temperature in LaMn2O5 to the field-induced transitions exhibited by NdMn2O5. A cusp in the susceptibility curves suggests an antiferromagnetic ordering at low temperatures, which is masked in the compounds containing strongly paramagnetic rare earths (Tb, Ho, Er). At high temperatures the paramagnetic moments are consistent in all cases with the presence of high-spin Mn3+ and Mn4+ cations.},
+author = {Alonso, J. A. and Casais, M. T. and Martinez-Lope, M. J. and Mart{\'{i}}nez, J. L. and Fern{\'{a}}ndez-D{\'{i}}az, M. T.},
+doi = {10.1088/0953-8984/9/40/017},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Alonso et al. - 1997 - A structural study from neutron diffraction data and magnetic properties of RMn2O5 (R = La, rare earth).pdf:pdf},
+issn = {09538984},
+journal = {Journal of Physics Condensed Matter},
+mendeley-groups = {PhD Thesis/GdMn2O5},
+number = {40},
+pages = {8515--8526},
+title = {{A structural study from neutron diffraction data and magnetic properties of RMn2O5 (R = La, rare earth)}},
+volume = {9},
+year = {1997}
+}
+
